--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Fullstack Codex</title>
 </head>
 <body>
-    
+    <h1>Shree ganesh.</h1>
     <script src="app.js"></script>
 </body>
 </html>
