--- a/index.html
+++ b/index.html
@@ -4,11 +4,98 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Mitr:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Fullstack Codex</title>
 </head>
 <body>
-    <h1>Shree ganesh.</h1>
+    <header id="header">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">FS CODEX</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            FREE SERVICES
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="#">QR CODE GENERATOR</a>
+                            <a class="dropdown-item" href="#">PASSWORD GENERATOR</a>
+                            <a class="dropdown-item" href="#">PDF TO WORD</a>
+                            <a class="dropdown-item" href="#">PDF TO EXCEL</a>
+                            <a class="dropdown-item" href="#">COMPRESS JPG</a>
+                            <a class="dropdown-item" href="#">COMPRESS PNG</a>
+                            <a class="dropdown-item" href="#">VIEW ALL</a>
+                        </div>
+                    </li>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        WEB DEVELOPMENT
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="#">HTML5</a>
+                        <a class="dropdown-item" href="#">CSS3/SASS</a>
+                        <a class="dropdown-item" href="#">JAVASCRIPT</a>
+                        <a class="dropdown-item" href="#">REACT JS</a>
+                        <a class="dropdown-item" href="#">TYPESCRIPT</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            PROGRAMMING
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="#">LEARN C++</a>
+                            <a class="dropdown-item" href="#">LEARN JAVA</a>
+                            <a class="dropdown-item" href="#">LEARN PYTHON</a>
+                        </div>
+                    </li>
+                </li>
+                <li class="nav-item">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            BACKEND
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="#">LEARN NODE JS</a>
+                            <a class="dropdown-item" href="#">LEARN MONGO DB</a>
+                            <a class="dropdown-item" href="#">LEARN EXPRESS JS</a>
+                            <a class="dropdown-item" href="#">LEARN LINUX & DEPLOYMENT</a>
+                        </div>
+                    </li>
+                </li>
+                <li class="nav-item">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">BLOG</a>
+                    </li>
+                </li>
+              </ul>
+            </div>
+          </nav>
+    </header>
+
+    <section>
+        <div class="container">
+            <div class="row">
+              <div class="col-6">Column 1</div>
+              <div class="col-6">Column 2</div>
+            </div>
+          </div>          
+    </section>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
     <script src="app.js"></script>
 </body>
 </html>
