--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown active">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             FREE SERVICES
                         </a>
@@ -87,7 +87,9 @@
         <div class="container">
             <div class="row">
               <div class="col-6">Column 1</div>
-              <div class="col-6">Column 2</div>
+              <div class="col-6 intro">
+                <img src="./img/intro-background.png" alt="intro-bg-picture">
+              </div>
             </div>
           </div>          
     </section>
@@ -99,3 +101,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
